--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="img/png" href="/img/4633027f2fdfc7ec175e63289ea5e1ad_tn.jfif">
+    <link rel="shortcut icon" type="img/png" href="./img/4633027f2fdfc7ec175e63289ea5e1ad_tn.jfif">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
