--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
       <nav class="navbar navbar-expand-lg ">
         <div class="container">
-          <a class="navbar-brand" href="/index.html">
+          <a class="navbar-brand" href="#rating">
             <img style="width: 100px; border-radius: 50%;" src="./img/4633027f2fdfc7ec175e63289ea5e1ad_tn.jfif" alt="tuta shop logo" title="tuta shop logo" />
           </a>
           <button
@@ -37,7 +37,7 @@
           <div class="collapse navbar-collapse custom__navbar" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item nav_item_custom ">
-                <a class="nav-link nav-link-custom" aria-current="page" href="./index.html"
+                <a class="nav-link nav-link-custom" aria-current="page" href="#rating"
                   >Về Tuta shop</a
                 >
               </li>
@@ -80,9 +80,10 @@
             <div style="margin: auto;" class="container row">
                 <div class="col-12 col-md-12 col-lg-6">
                     <img style="width: 100%;" src="./img/real__image.jfif" alt="">
-                    <p class="rating__title">
-                        Đánh Giá Về Sản Phẩm
-                    </p>
+                    <a href="./shop.html" class="rating__title">
+                        Xem Thêm sản phẩm
+                        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    </a>
                     <p class="rating__custom">
                         Ý KIẾN KHÁCH HÀNG
                     </p>
