--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </header>
           <section class="banner">
             <div class="container row">
-                <div class="banner__left col-8">
+                <div class="banner__left col-12 col-md-8 col-lg-8">
                     <p class="banner__text text__above">
                         bánh tráng tu ta
                     </p>
@@ -96,7 +96,7 @@
                 </a>
                     </div>
                 </div>
-                <div class="banner__right col-4">
+                <div class="banner__right col-12 col-md-4 col-lg-4">
                     <img style="width: 100%; border-radius: 50%;" src="./img/baner.jpg" alt="">
                 </div>
             </div>
