--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="img/png" href="./img/4633027f2fdfc7ec175e63289ea5e1ad_tn.jfif">
+    <meta property="og:description" content="TUTA - NGON KHÓ CƯỠNG thương hiệu ăn vặt được nhiều bạn trẻ hiện tại yêu thích." />
+    <meta property="description" content="TUTA - NGON KHÓ CƯỠNG thương hiệu ăn vặt được nhiều bạn trẻ hiện tại yêu thích." />
+    <link rel="canonical" href="https:tuta-ngonkhocuong.vn" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -497,29 +500,8 @@ Muối tép hành cay cay
       crossorigin="anonymous"
     ></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.x.x/js/swiper.min.js"></script>
-<script>
-    let mybutton = document.getElementById("btn-back-to-top");
-
-window.onscroll = function () {
-  scrollFunction();
-};
-
-function scrollFunction() {
-  if (
-    document.body.scrollTop > 20 ||
-    document.documentElement.scrollTop > 20
-  ) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
-mybutton.addEventListener("click", backToTop);
-
-function backToTop() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
+<script type="text/javascript" src="./index.js">
+   
 </script>
   </body>
 </html>
