--- a/shop.html
+++ b/shop.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="img/png" href="./img/4633027f2fdfc7ec175e63289ea5e1ad_tn.jfif">
+    <meta property="og:description" content="TUTA - NGON KHÓ CƯỠNG thương hiệu ăn vặt được nhiều bạn trẻ hiện tại yêu thích." />
+    <meta property="description" content="TUTA - NGON KHÓ CƯỠNG thương hiệu ăn vặt được nhiều bạn trẻ hiện tại yêu thích." />
+    <link rel="canonical" href="https:tuta-ngonkhocuong.vn" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.x.x/css/swiper.min.css">
 
     <link rel="stylesheet" href="./index.css" />
-    <title>Tuta shop</title>
+    <title>Tuta - Ngon khó cưỡng</title>
   </head>
   <body>
     <header>
@@ -260,6 +264,14 @@
       </div>
     </footer>
 
+    <button
+    type="button"
+    class="btn btn-danger btn-floating btn-lg"
+    id="btn-back-to-top"
+    >
+<i class="fas fa-arrow-up"></i>
+</button>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
@@ -275,7 +287,8 @@
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous"
     ></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.x.x/js/swiper.min.js"></script>
-
+<script type="text/javascript" src="./index.js">
+   
+</script>
   </body>
 </html>
