--- a/shop.html
+++ b/shop.html
@@ -253,7 +253,7 @@
                       <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                      </a>
                      <a href="https://zalo.me/0969319316">
-                      <img style="width: 60px;" src="./img/zalo.png.crdownload" alt="tiktoklogo" title="tiktok shop">
+                      <img style="width: 60px;" src="./img/zalo.png" alt="tiktoklogo" title="tiktok shop">
                    </a>
                       
                   </p>
