--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   </a>
                   <a class="button__contact" href="https://zalo.me/0969319316">
                     <span style="background: #008fe9;">
-                      <img style="width: 60px;" src="./img/zalo.png.crdownload" alt="tiktoklogo" title="tiktok shop">
+                      <img style="width: 60px;" src="./img/zalo.png" alt="tiktoklogo" title="tiktok shop">
                     </span>
                     <span>
                     Zalo của TuTa
@@ -465,7 +465,7 @@ Muối tép hành cay cay
                             <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                            </a>
                            <a href="https://zalo.me/0969319316">
-                            <img style="width: 60px;" src="./img/zalo.png.crdownload" alt="tiktoklogo" title="tiktok shop">
+                            <img style="width: 60px;" src="./img/zalo.png" alt="tiktoklogo" title="tiktok shop">
                          </a>
                             
                         </p>
