--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                          <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                         </span>
                         <span>
-                        Shoppe của TuTa
+                        Shopee của TuTa
                         </span>
                     </a>
                     <a class="button__contact" href="https://www.tiktok.com/@tutangonkhocuong1">
